<resources>
    <string name="opening">Fitness Freak</string>
    <string name="app_name">FitnessFreak</string>
    <string name="a1">Fitness \nFreak</string>
    <string name="a2">Login </string>
    <string name="a3">Enter Email....</string>
    <string name="a4">Enter Password....</string>
    <string name="a5">Forgot Password?</string>
    <string name="a6">Don\'t Have an Account?</string>
    <string name="a7">Login</string>
    <string name="a8">Register Now</string>
    <string name="a9">Enter Name </string>
    <string name="a10">Enter Email </string>
    <string name="a11">Enter PhoneNumber</string>
    <string name="a12">Enter Password</string>
    <string name="a13">Confirm Password </string>
    <string name="a14">Register</string>

    <string name="a24">SUN</string>
    <string name="a25">MON</string>
    <string name="a26">TUE</string>
    <string name="a27">WED</string>
    <string name="a28">THU</string>
    <string name="a29">FRI</string>
    <string name="a30">SAT</string>
    <string name="b1">Status</string>
    <string name="b2">Calendar</string>
    <string name="b3">History</string>
    <string name="b4">Profile</string>
    <string name="b5">Change Password</string>
    <string name="b6">Enter New Password....</string>
    <string name="b7">Confirm New Passsword....</string>
    <string name="b8">Enter Current Password....</string>
    <string name="b9">Confirm</string>
    <string name="b10">Saved Login</string>
    <string name="b11">A previous Login record is found. Do you want to Login now?</string>
    <string name="b12">Remember Me</string>
    <string name="b13">Login Now</string>
    <string name="b14">Reset Password</string>
    <string name="b15">Please Enter your email. A password reset mail will be send there.</string>
    <string name="b16">Dismiss</string>
    <string name="b17">Resend Email</string>
    <string name="b18">Email Verification</string>
    <string name="b19">Your Account hadn\'t been verified yet! Please verify it first or request another verification mail from below.</string>
    <string name="b20">Loading....</string>
    <string name="b21">Profile Setup</string>
    <string name="b22">Save Profile</string>
    <string name="b23">Personal Info: </string>
    <string name="b24">Basic Info: </string>
    <string name="b25">Your Age: </string>
    <string name="b26">Enter age....</string>
    <string name="b27">Enter Gender: </string>
    <string name="b28">Male</string>
    <string name="b29">Female</string>
    <string name="b31">cm</string>
    <string name="b30">Feet-inch</string>
    <string name="b32">Enter Height: </string>
    <string name="b33">Height (cm)</string>
    <string name="b34">Feet</string>
    <string name="b35">Inch</string>
    <string name="b36">Current Weight: </string>
    <string name="b37">kg</string>
    <string name="b38">lbs</string>
    <string name="b39">Enter Weight....</string>
    <string name="b40">Continue</string>
    <string name="b41">Goal Weight: </string>
    <string name="b42">Enter Here....</string>
    <string name="b43">Target: </string>
    <string name="b44">Maintain</string>
    <string name="b45">Lose</string>
    <string name="b46">Gain</string>
    <string name="b47">Activity Level: </string>
    <string name="b48">Finish Setup</string>
    <string name="b49">Age</string>
    <string name="b50">Height</string>
    <string name="b51">Current Weight</string>
    <string name="b52">Goal Weight</string>
    <string name="b53">Save</string>
    <string name="b54">Cancel</string>
    <string name="b55">Current Weight</string>
    <string name="b56">Edit</string>
    <string name="b57">Are you sure to logout?</string>
    <string name="b58">Yes</string>
    <string name="b59">No</string>
    <string name="b60">BMI: </string>
    <string name="c1">40</string>
    <string name="c2">15</string>
    <string name="c3">18.5</string>
    <string name="c4">25</string>
    <string name="c5">30</string>
    <string name="c6">35</string>
    <string name="c7">BMR: </string>
    <string name="c8">TDEE: </string>
    <string name="c9">Reset Progress</string>
    <string name="c10"> Logout</string>
    <string name="c11">Calorie Limit for This Week : </string>
    <string name="c12">Total: </string>
    <string name="c13">Left: </string>
    <string name="c14">Enter today\'s values: </string>
    <string name="c014">Please Select a date from overview slidebar</string>
    <string name="c15">Date: </string>
    <string name="c16">Consumed Calories: </string>
    <string name="c17">Burnt Calories: </string>
    <string name="c18">Enter here....</string>
    <string name="c19">Insert</string>
    <string name="c20">Overview : </string>
    <string name="c21">Refresh</string>
    <string name="c22">Excellent</string>
    <string name="c23">No Date Selected!</string>
    <string name="c24">Select Range </string>
    <string name="c25">Entries: </string>
    <string name="c26">Status: </string>
    <string name="c27">Select</string>
    <string name="c28">Height (cm)</string>
    <string name="c29">No Entries Found!</string>
    <string name="c30">Taken So Far: </string>
    <string name="c31">Burnt So Far:</string>
    <string name="c32">No Record Found!</string>
    <string name="c33">User Guide</string>
    <string name="c34">This application is to assist you so that you can track your consumed calories and burnt calories. \n\nFor using this app,first you have to create an account(Click Register button).Then please login to your account.After finishing settting up your profile,this app will measure your BMI,BMR and TDEE.\nNext this will show a calculated value of your calorie limit for current week.All you have to do is to add your consumed calorie and burnt calorie for the present day.\nYou will see the calorie count left for the remaining days.\n\nThus you can balance your diet.You can overeat sometimes.After that you can cut extra consumed calories in other days.\n\nThe calender page will show you every entries of the entire month.By clicking on a particular date,you will be able to see that.\n\nReport page is to show your changes in weight and every entries that you give after registering into this app.   </string>
    <string name="c35">Got it</string>
    <string name="c36">Close</string>
    <string name="c37">Your Info :</string>
    <string name="c38">Weight :</string>

</resources>