<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coral"
    tools:context=".LoginPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="7dp"
            app:drawableTopCompat="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            app:drawableTopCompat="@drawable/ic_info" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/e1"
                android:gravity="center"
                android:text="@string/a2"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:autofillHints="@string/a3"
                android:background="@drawable/e2"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/coda"
                android:hint="@string/a3"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#575757"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:autofillHints="@string/a4"
                android:background="@drawable/e2"
                android:drawableStart="@drawable/ic_password"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/coda"
                android:hint="@string/a4"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="#575757"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:backgroundTint="@color/yellow"
                android:gravity="center"
                android:text="@string/a7"
                android:textColor="#000000"
                android:textSize="16sp"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/a5"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/coda"
                android:text="@string/a6"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                android:text="@string/a8"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>