<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/e4"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="52dp"
            android:paddingEnd="2dp"
            android:text="@string/b5"
            android:textColor="#1B1B1B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:drawableTopCompat="@drawable/ic_multiply" />

    </LinearLayout>

    <EditText
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/b8"
        android:background="@drawable/e2"
        android:ems="10"
        android:hint="@string/b8"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="2dp"
        android:paddingBottom="6dp"
        android:textColorHint="#878787"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pass3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/b6"
        android:background="@drawable/e2"
        android:ems="10"
        android:hint="@string/b6"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="2dp"
        android:paddingBottom="6dp"
        android:textColorHint="#878787"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pass4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/b7"
        android:background="@drawable/e2"
        android:ems="10"
        android:hint="@string/b7"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingEnd="2dp"
        android:paddingBottom="6dp"
        android:textColorHint="#878787"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@null"
        android:text="@string/b9" />
</LinearLayout>